[tool.poetry]
name = "athenaeum"
version = "0.1.0"
description = ""
authors = ["mathewgeola <mathewgeola@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorlog = "^6.8.2"
pyexecjs = "^1.5.1"
py-mini-racer = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
